[package]
name = "ruv-swarm-ml"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Machine learning integration for RUV Swarm"

[dependencies]
ruv-swarm-core = { path = "../ruv-swarm-core" }