[package]
name = "ruv-swarm-ml"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Machine learning integration for RUV Swarm"

[dependencies]
ruv-swarm-core = { path = "../ruv-swarm-core" }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# Optional WASM dependencies
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

# Neural network and ML dependencies (placeholders for now)
# TODO: Add actual neuro-divergent dependency when available
# neuro-divergent = { version = "0.1", features = ["wasm"] }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys", "web-sys"]

[lib]
crate-type = ["cdylib", "rlib"]