[package]
name = "ruv-swarm-persistence"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Persistence layer with SQLite and ORM for RUV-Swarm"

[dependencies]
# Core dependencies
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup", "modern_sqlite", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "console"] }
rexie = "0.6"  # IndexedDB wrapper

# Development dependencies
[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3.12"
tokio-test = "0.4"

[features]
default = ["rusqlite-backend"]
rusqlite-backend = []
sqlx-backend = ["sqlx"]
wasm = []
migrations = []