[package]
name = "ruv-swarm-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Persistence layer with SQLite and ORM for RUV-Swarm"

[dependencies]
# Core dependencies
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }

# Database
rusqlite = { workspace = true, features = ["backup", "modern_sqlite", "serde_json"] }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { workspace = true }

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Storage", "console"] }
wasm-bindgen-futures = "0.4"
rexie = "0.6"  # IndexedDB wrapper

# Development dependencies
[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3.12"
tokio-test = "0.4"

[features]
default = ["rusqlite-backend"]
rusqlite-backend = []
# sqlx-backend = ["sqlx"]
wasm = []
migrations = []