[package]
name = "ruv-swarm-transport"
version = "0.1.0"
edition = "2021"
authors = ["RUV-FANN Team"]
description = "Transport layer for RUV-FANN swarm communication with WebSocket and SharedMemory support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruv-fann/ruv-swarm"
keywords = ["swarm", "transport", "websocket", "shared-memory", "distributed"]
categories = ["network-programming", "concurrency", "wasm"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls", "rustls-tls-native-roots"] }
tungstenite = "0.21"

# Compression
flate2 = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Shared memory
shared_memory = "0.12"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
dashmap = "5.5"

# UUID for message IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3.70", optional = true, features = [
    "MessagePort",
    "SharedArrayBuffer",
    "Worker",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
    "ReadableStream"
]}
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
rand = "0.8"

[[bench]]
name = "transport_benchmarks"
harness = false

[features]
default = ["websocket", "shared-memory"]
websocket = []
shared-memory = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]