[package]
name = "ruv-swarm-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Transport layer for RUV-FANN swarm communication with WebSocket and SharedMemory support"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["swarm", "transport", "websocket", "shared-memory", "distributed"]
categories = ["network-programming", "concurrency", "wasm"]

[dependencies]
# Core workspace dependencies
tokio = { workspace = true, features = ["net", "io-util", "rt"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Transport-specific dependencies
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
shared_memory = { workspace = true }
uuid = { workspace = true }

# Additional dependencies not in workspace
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
url = "2.5"
backoff = { version = "0.4", features = ["tokio"] }
futures-util = "0.3"  # Add missing futures-util dependency

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "MessagePort",
    "Worker",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
    "ReadableStream",
    "console",
    "Window"
]}
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"
rand = "0.8"

[[bench]]
name = "transport_benchmarks"
harness = false

[features]
default = ["websocket", "shared-memory"]
websocket = []
shared-memory = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]