[package]
name = "ruv-swarm-wasm-unified"
version = "1.0.5"
edition = "2021"
authors = ["The ruv-swarm Contributors"]
description = "Unified WASM module exposing all ruv-FANN ecosystem capabilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruv-fann/ruv-swarm"
keywords = ["wasm", "neural-network", "swarm", "ruv-fann", "forecasting"]
categories = ["wasm", "science", "algorithms", "mathematics", "concurrency"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }
rayon = { version = "1.8", optional = true }

# Internal crate dependencies with WASM features
ruv-fann = { path = "../../../../", features = ["wasm"], optional = true }
neuro-divergent = { path = "../../../../../neuro-divergent", optional = true }
ruv-swarm-core = { path = "../ruv-swarm-core", features = ["wasm"] }
ruv-swarm-persistence = { path = "../ruv-swarm-persistence", features = ["wasm"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "WorkerGlobalScope",
  "DedicatedWorkerGlobalScope",
  "Navigator",
  "Window",
]

# WASM optimization features
[features]
default = ["simd", "parallel", "optimize"]
simd = []
parallel = ["rayon"]
optimize = []
wee_alloc_feature = ["wee_alloc"]
full = ["ruv-fann", "neuro-divergent"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# WASM-specific optimizations
[package.metadata.wasm-pack]
"wasm-pack-plugin" = "wasm-pack-plugin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd"]