[package]
name = "ruv-swarm-wasm"
version = "1.0.5"
edition = "2021"
authors = ["rUv Contributors"]
description = "WebAssembly bindings for ruv-swarm neural network orchestration"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console", "Performance", "PerformanceTiming"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3"
num-traits = "0.2"

# SIMD optimization dependencies
wide = { version = "0.7", features = ["serde"] }

# Core dependencies with full functionality
ruv-fann = { version = "0.1.2", default-features = false, features = ["no_std", "serde", "logging"] }
ruv-swarm-core = { path = "../ruv-swarm-core", version = "1.0.5", default-features = false, features = ["wasm"], optional = true }
ruv-swarm-ml = { path = "../ruv-swarm-ml", version = "1.0.5", features = ["wasm"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook", "simd"]
wee_alloc = ["dep:wee_alloc"]
simd = []  # SIMD support using 'wide' crate
simd128 = ["simd"]
no-simd = []
full = ["ruv-swarm-core", "ruv-swarm-ml"]
core = ["ruv-swarm-core"]
ml = ["ruv-swarm-ml"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[profile.release]
# Optimize for size
opt-level = "z"
# LTO for cdylib targets
lto = true
# Strip debug symbols  
strip = true
# Single codegen unit for better optimization
codegen-units = 1
# Reduce binary size by removing panic handling
panic = "abort"
# Disable overflow checks in release mode
overflow-checks = false

# SIMD configuration is handled via RUSTFLAGS environment variable
# and build.rs script for better cross-platform compatibility