[package]
name = "swe-bench-adapter"
version = "0.2.0"
edition = "2021"
authors = ["ruv-swarm team"]
description = "SWE-Bench adapter for ruv-swarm orchestration system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruv-fann/ruv-swarm"
keywords = ["swe-bench", "benchmarking", "evaluation", "swarm", "orchestration"]
categories = ["development-tools", "science", "algorithms"]

[dependencies]
# Core dependencies
ruv-swarm-core = { path = "../ruv-swarm-core", version = "0.2.0" }
ruv-swarm-agents = { path = "../ruv-swarm-agents", version = "0.2.0" }
ruv-swarm-persistence = { path = "../ruv-swarm-persistence", version = "0.2.0" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for downloading instances
reqwest = { version = "0.12", features = ["json", "stream"] }

# Diff and patch handling
similar = { version = "2.3", features = ["text", "inline"] }
patch = "0.7"

# Time and metrics
chrono = { version = "0.4", features = ["serde"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path manipulation
walkdir = "2.4"
tempfile = "3.8"

# Command execution
subprocess = "0.2"

# Regular expressions for parsing
regex = "1.10"

# Git operations
git2 = "0.18"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
serial_test = "3.0"
pretty_assertions = "1.4"

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures"]

[[bench]]
name = "swe_bench_benchmarks"
harness = false